[package]
description = "Wager market for creating wagers for outcomes of events"
edition = "2021"
name = "wager_market"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "wager_market"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
arrayref = "0.3.6"
solana-program = "^1.13.0"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token = "^3.5.0"

[dev-dependencies]
proptest = "1.0"
roots = "0.0.7"
